Always Show Pin Btn On Search List Item

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -34,7 +34,7 @@ body {
 }
 
 .btn-pin-this-item {
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 .list-group-item:hover .btn-pin-this-item {
