--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -36,6 +36,15 @@ body {
     background-color: #f5f5f5;
 }
 
+.app-nav-item {
+    padding-bottom: 10px;
+    background-color: #f5f5f5;
+}
+
+.app-nav-item:hover {
+    background-color: #f0f0f0;
+}
+
 .icon-link {
     color: #555;
 }
