--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -17,6 +17,16 @@ body {
     margin-bottom: 0px;
 }
 
+.search-box {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
 .main-pinned-box {
     display: flex;
     flex-direction: column;
