--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -31,6 +31,44 @@ body {
     border-top-right-radius: 3px;
 }
 
+.search-box-with-icon input.search-input {
+    padding-left: 34px;
+    padding-right: 12px;
+}
+
+.search-input-icon {
+    position: absolute;
+    top: inherit;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    pointer-events: none;
+}
+
+.search-input {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #FFFFFF;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+.search-input:focus {
+    border-color: #66afe9;
+    outline: 0;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
+}
+
 .main-pinned-box {
     display: flex;
     flex-direction: column;
@@ -63,18 +101,6 @@ body {
     color: #555;
 }
 .after-header { padding:50px 0px; }
-
-.has-feedback-left input.form-control {
-    padding-left: 34px;
-    padding-right: 12px;
-}
-.has-feedback-left .form-control-feedback {
-    left: 0;
-}
-
-.form-horizontal .has-feedback-left .form-control-feedback {
-    left: 12px;
-}
 
 .btn-pin-this-item {
     /*visibility: hidden;*/
