Replace Glyphicons With Font Awesome Icons And Remove Bootstrap
from popup.html. Add custom CSS to compensate for removed Bootstrap library

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -1,8 +1,15 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-    font-size: 120%;
+    font-size: 14px;
     padding-bottom: 0px;
-    margin-bottom: 0px;
+    margin: 0;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #FFFFFF;
 }
 .popup-dimensions {
     /* avoid an excessively wide status text */
