Make Category Listings Show Pointer Cursor On Hover

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -91,6 +91,7 @@ body {
 
 .main-pinned-item:hover {
     color: #555;
+    cursor: pointer;
     text-decoration: none;
     background-color: #f5f5f5;
 }
