Force No Text Decoration When Not Hovered
to prevent "all categories" button getting decorated as <a> link

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -87,6 +87,7 @@ body {
     color: #555;
     border-top: 1px solid #ddd;
     background-color: #FFFFFF;
+    text-decoration: none;
 }
 
 .main-pinned-item:hover {
