Increase Category List Item Padding To Avoid Feeling Crammed

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -83,7 +83,7 @@ body {
 }
 
 .main-pinned-item {
-    padding: 10px 5px 5px 10px;
+    padding: 10px 15px;
     color: #555;
     border-top: 1px solid #ddd;
     background-color: #FFFFFF;
