--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -18,8 +18,7 @@ body {
     text-overflow: ellipsis;
     overflow: hidden;
     */
-    max-width: 800px;
-    min-width: 300px;
+    width: 300px;
 }
 
 .search-view-container {
