--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -82,6 +82,9 @@ body {
 }
 
 .main-pinned-item {
+    display: flex;
+    justify-content: space-between; /* Push category name to left and favorite button to right*/
+
     padding: 10px 15px;
     color: #555;
     border-top: 1px solid #ddd;
@@ -94,6 +97,13 @@ body {
     cursor: pointer;
     text-decoration: none;
     background-color: #f5f5f5;
+}
+
+.pinned-item-category-name {
+    /* Clip text to avoid category name overflowing to next line when name is long */
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .app-nav-item {
