Align Category List Button Center Vertically
- The favorite/unfavorite tab beside category name is a bit upwards
vertically. This will fix that and align it at the center vertically.

--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -62,6 +62,7 @@
 .main-pinned-item {
     display: flex;
     justify-content: space-between; /* Push category name to left and favorite button to right*/
+    align-items: center;
 
     padding: 10px 15px;
     color: #555;
