Vertically Align Text In App Navigation To Center
otherwise, "BACK" text is appearing at a lower height than chevron-left

--- a/webextension/browser-action/css/ba-all-categories.css
+++ b/webextension/browser-action/css/ba-all-categories.css
@@ -42,6 +42,7 @@
 .app-nav-item {
     display: flex;
     justify-content: start; /* Keep chevron-left and "Back" text to the left*/
+    align-items: center; /* Vertically align chevron and "Back" text */
 
     padding: 10px 15px;
     color: #555;
