docs: Spelling Correct Netflix Categories In Comment

--- a/webextension/browser-action/css/ba-popup.css
+++ b/webextension/browser-action/css/ba-popup.css
@@ -1,5 +1,5 @@
 /* Netflix Categories Browser Action Popup Stylesheet
-   Contains common styles used by all Netflic Categories browser action popups
+   Contains common styles used by all Netflix Categories browser action popups
 */
 
 * {
