--- a/webextension/browser-action/css/ba-all-categories.css
+++ b/webextension/browser-action/css/ba-all-categories.css
@@ -2,7 +2,7 @@
 */
 
 .below-back-btn {
-    padding-top: 43px;
+    padding-top: 45px;
 }
 
 .main-pinned-box {
@@ -50,6 +50,7 @@
     justify-content: start; /* Keep chevron-left and "Back" text to the left*/
     align-items: center; /* Vertically align chevron and "Back" text */
 
+    height: 45px;
     padding: 10px 15px;
     color: #555;
     background-color: #f5f5f5;
