--- a/webextension/browser-action/css/popup.css
+++ b/webextension/browser-action/css/popup.css
@@ -101,4 +101,12 @@
 footer {
     font-size: x-small;
     text-align: center;
+    border-top: 1px solid #ddd;
+    color: #555;
+    cursor: pointer;
+}
+
+footer:hover {
+    background-color: #f5f5f5;
+    color: #000;
 }
